# Stack

./: .gitignore  CMakeLists.txt  main.cpp
include/: CMakeLists.txt  stack.hpp
